# TU_WIEN_BETRIEBSSYSTEME

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
1a/binary-digits/: Makefile  README.md  binary-digits.c
1a/ispalindrom/: Makefile  ispalindrom.c
1a/mycompress/: Makefile  mycompress.c
1a/mydiff/: Makefile  mydiff.c
1a/myexpand/: Makefile  myexpand.c
1a/mygrep/: Makefile  mygrep.c
1b/html/: Makefile  client.c  server.c  sharedTools.c  sharedTools.h
1b/html/requestHandling/: sharedTools.c  sharedTools.h
2/forkFFT/: Makefile  forkFFT.c
2/forkSort/: Makefile  forkSort.c
2/intmul/: Makefile  intmul.c
3/3color/: Makefile  circularBuffer.c  circularBuffer.h  generator.c  supervisor.c
3/fb_arc_set/: circularBuffer.c  circularBuffer.h  generator.c  supervisor.c
3NEW/3color/: circularBuffer.c  circularBuffer.h  generator.c  supervisor.c
3NEW/fb_arc_set/: circularBuffer.c  circularBuffer.h  generator.c  supervisor.c
html/client/: client.c
html/requestHandling/: sharedTools.c
html/server/: server.c
mycompress/: mycompress.c
